# knowledge_graph

./: .gitignore  CLAUDE.md  README.md  知识图谱prd.md
backend/: .env.example  .eslintrc.json  .prettierrc  Dockerfile  REFACTOR_COMPARISON.md  alembic.ini  package.json  pyproject.toml  tsconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 20260211_core_tables.py  20260212_add_ingestion_tables.py  20260213_add_graph_projects.py
backend/src/: config.py  config.ts  index.ts  main.py
backend/src/api/dependencies/: __init__.py  auth.py  graph.py  ingestion.py
backend/src/api/middlewares/: authMiddleware.ts
backend/src/api/routers/: __init__.py  auth.py  entities.py  extraction.py  graph.py  ingestion.py  jobs.py  projects.py  query.py  reasoning.py  relations.py  visualization.py
backend/src/api/routes/: auth.ts  entities.ts  extraction.ts  graph.ts  ingestion.ts  projects.ts  query.ts  relations.ts  visualization.ts
backend/src/api/schemas/: __init__.py  auth.py  graph.py  ingestion.py  project.py  reasoning.py  visualization.py
backend/src/application/commands/: __init__.py  apply_cleaning_preview.py  backup_project.py  backup_project.ts  build_graph.py  build_graph.ts  create_entity.py  create_graph_project.py  create_relation.py  create_rule.py  create_rule.ts  extract_knowledge.py  extract_knowledge.ts  ingest_data.ts  merge_entities.py  merge_entities.ts  register_data_source.py  (+3 more)
backend/src/infrastructure/: __init__.py
backend/tests/e2e/: test_projects_api.py
backend/tests/integration/: conftest.py  test_neo4j.py  test_repositories.py
(+272 files in other folders)
